k8s-manifests/backend.yml
# backend deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: backend-pod
  template:
    metadata:
      labels:
        name: backend-pod
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
        - name : backend
          # use youre backend's docker image
          image: 640168439056.dkr.ecr.eu-west-3.amazonaws.com/backend:1.0.9
          ports :
          - containerPort: 80
---
# backend service
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    name: backend-pod
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
# backend ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
