k8s-manifests/dashboard.yml
# dashboard deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-deployment
  labels:
    name: dashboard-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: dashboard-pod
  template:
    metadata:
      labels:
        name: dashboard-pod
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
        - name : dashboard
          # use youre dashboard's docker image
          image: 640168439056.dkr.ecr.eu-west-3.amazonaws.com/dashboard:1.0.9
          ports :
          - containerPort: 80
---
# dashboard service
apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
spec:
  selector:
    name: dashboard-pod
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
# dashboard ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard-svc
            port:
              number: 80
